--- a/src/assets/css/allgoods.css
+++ b/src/assets/css/allgoods.css
@@ -15,7 +15,7 @@
 }
 .goods-item{
     margin-top: 30px;
-    border-bottom: 1px solid #cccccc;
+    /*border-bottom: 1px solid #cccccc;*/
     /*position: relative;*/
 
 }
